Wifi Signal telemetry styles and some minor fixes.

--- a/data/index.html
+++ b/data/index.html
@@ -252,7 +252,7 @@
 
   // Config
   
-  // GAMEPAD
+  // Gamepad
   config.gamepadAxis12FeedbackStyle = 'PowerStick';   // Circle - Square - PowerStick
   config.gamepadAxis34FeedbackStyle = 'Square';       // Circle - Square - PowerStick
 
@@ -265,6 +265,9 @@
   config.gamepadPanel3BottomTrimPlus = 'button_3';    // Map trim (Right bottom +) to gamepad buttom 
   config.gamepadPanel3BottomTrimMinus = 'button_0';   // Map trim (Right bottom -) to gamepad buttom 
   
+  // Telemetry
+  config.telemetryWifiSignalStyle = 'Percentual';   // Percentual or dBm 
+
   </script>
 
 </body>
