Servo and motor control WIP

--- a/data/index.html
+++ b/data/index.html
@@ -268,6 +268,18 @@
   // Telemetry
   config.telemetryWifiSignalStyle = 'Percentual';   // Percentual or dBm 
 
+  // Plane
+  config.panel1type = 'DifferentialThrust';   // PitchYaw - Thrust - ThrustRoll - DifferentialThrust 
+  config.panel3type = 'PitchYaw';
+
+  config.motorQuantity = 1;       // 1 or 2 motors supported
+  config.motorRigth = 1; 
+  config.motorLeft = 2;
+
+  config.pitchServoNumber = 1;  
+  config.rollServoNumber = 2;     
+  config.yawServoNumber = 3;
+
   </script>
 
 </body>
