Motor Shield Signaling implementation

--- a/data/index.html
+++ b/data/index.html
@@ -275,6 +275,9 @@
   config.motorQuantity = 1;       // 1 or 2 motors supported
   config.motorRigth = 1; 
   config.motorLeft = 2;
+  config.motor1direction = "CCW";  // Clockwise - CounterClockwise
+  config.motor2direction = "CW";   // Clockwise - CounterClockwise
+
 
   config.pitchServoNumber = 1;  
   config.rollServoNumber = 2;     
