--- a/data/index.html
+++ b/data/index.html
@@ -275,9 +275,14 @@
   config.motorQuantity = 1;       // 1 or 2 motors supported
   config.motorRigth = 1; 
   config.motorLeft = 2;
-  config.motor1direction = "CCW";  // Clockwise - CounterClockwise
-  config.motor2direction = "CW";   // Clockwise - CounterClockwise
+  
+  config.motor1orientation = "CounterClockwise";    // Clockwise - CounterClockwise
+  config.motor2orientation = "CounterClockwise";    // Clockwise - CounterClockwise
 
+  config.servo1maxValue = 180;
+  config.servo2maxValue = 180;
+  config.servo3maxValue = 180;
+  config.servo4maxValue = 180;
 
   config.pitchServoNumber = 1;  
   config.rollServoNumber = 2;     
